--- a/4. 不変の活用 -安定動作を構築する-.md
+++ b/4. 不変の活用 -安定動作を構築する-.md
@@ -14,3 +14,10 @@
     - 引数
 - 可変インスタンスの使い回し
   - 使い回しを行うと、同じインスタンスを用いている他の変数に対しても再代入の影響が出る
+  - 可変インスタンスを用いていると。関数やメソッドによっても値が書き変わってしまうといってデメリットがある
+
+- 副作用
+  - 関数が引数を受け取り、戻り値を返すときに外部の状態を変更すること
+    - 変数を受け取って戻り値を返すことを主作用
+    - それ以外の状態変化を副作用という
+    - 
