--- a/7.コレクション -ネストを解消する構造化技法-.md
+++ b/7.コレクション -ネストを解消する構造化技法-.md
@@ -21,4 +21,14 @@
   - if分岐時に失敗したらbreakやerrorを吐き出させる
     - のように記載するとネストさせずに成功時の次の処理を書くことができる
   - あえて条件を反転させるといった考えを持つだけでネスト化を避けることができる
-  - 
+
+- コレクションに関するカプセル化
+  - コレクションメソッドの定凝集
+    - ある同じコレクションを扱う違うクラスが定義されている中で、似たような振る舞いのメソッドを持っている
+  - 低凝集を回避させるための手法
+    - ファーストクラスコレクション
+    - コレクションを操作するためのメソッドをまとめたクラスを作成することで、凝集させる
+  - ファーストクラスコレクションの特徴として低凝集を挙げているが、コレクションをそのまま返してしまうメソッドをクラスに入れてしまうと外部でコレクションの状態が破壊されてしまうリスクがある。
+    - 外部から破壊されないようにイミュータブルにして返してあげる必要がある
+      - java:unmodifiableList
+      - typescript:[参照](https://stackoverflow.com/questions/41238306/immutable-list-and-typescript-proper-way-to-define-an-array-of-objects-with-type)
